Set webpage title

--- a/bubblechamber.html
+++ b/bubblechamber.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Untitled</title>
+    <title>Bubble Chamber</title>
     <script src="libraries/p5.min.js" type="text/javascript"></script>
     <style>
 html, body {
