Update webpages title for Node Garden

--- a/nodegarden.html
+++ b/nodegarden.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Substrate</title>
+    <title>Node Garden</title>
     <script src="libraries/p5.min.js" type="text/javascript"></script>
     <style>
 html, body {
